--- a/src/components/DetailInfo/style.css
+++ b/src/components/DetailInfo/style.css
@@ -14,11 +14,9 @@
     #detail-info-container .info-content h1 {
       font-size: 20px;
       color: #333; }
-    #detail-info-container .info-content .star-container {
-      margin: 5px 0; }
-      #detail-info-container .info-content .star-container .price {
-        margin-left: 20px;
-        color: #999; }
+    #detail-info-container .info-content .price {
+      margin-left: 20px;
+      color: #999; }
     #detail-info-container .info-content .sub-title {
       color: #999; }
   #detail-info-container .info-desc {
