--- a/src/components/PcHeader/style.scss
+++ b/src/components/PcHeader/style.scss
@@ -21,12 +21,13 @@
     float: right !important;
 }
 
-.ant-menu-horizontal>.ant-menu-item>a, .ant-menu-horizontal>.ant-menu-submenu>a {
+.ant-menu-horizontal>.ant-menu-item>a,
+.ant-menu-horizontal>.ant-menu-submenu>a {
     display: inline-block !important;
 }
 
-.container{
-  padding-top: 10px;
+.container {
+    padding-top: 10px;
 }
 
 .leftContainer {
@@ -39,16 +40,18 @@
     float: left;
 }
 
-.ant-card{
-  margin-top: 5px !important;
+.ant-card {
+    margin-top: 5px !important;
 }
 
-.ant-card-head-title{
-  text-align: left !important;
+.ant-card-head-title {
+    text-align: left !important;
 }
-.ant-card-body{
-  text-align: left !important;
+
+.ant-card-body {
+    text-align: left !important;
 }
+
 .usercenter {
     float: right !important;
 }
@@ -117,8 +120,8 @@
     text-overflow: ellipsis;
 }
 
-.clearfix{
-  margin-top: 20px;
+.clearfix {
+    margin-top: 20px;
 }
 
 .ant-tabs-bar {
@@ -129,12 +132,14 @@
     padding: 15px !important;
 }
 
-.leftContainer{
-  width:400px;
-  float: left;
+.leftContainer {
+    width: 400px;
+    float: left;
 }
 
+
 /*image block******START*****/
+
 .imageblock {
     float: left;
 }
@@ -147,9 +152,10 @@
     color: #999;
 }
 
-.register{
-  float: right !important;
+.register {
+    float: right !important;
 }
+
 
 /*image block******END*****/
 
@@ -163,9 +169,9 @@ iframe {
     font-size: 12px !important;
 }
 
-.ant-menu-horizontal > .ant-menu-item > a, .ant-menu-horizontal > .ant-menu-submenu > a
-{
-  display: inline-block !important;
+.ant-menu-horizontal>.ant-menu-item>a,
+.ant-menu-horizontal>.ant-menu-submenu>a {
+    display: inline-block !important;
 }
 
 
@@ -178,18 +184,21 @@ iframe {
 
 
 /*Footer******End*****/
- .title,.article-title .title {
+
+.title,
+.article-title .title {
     font-size: 0.44rem !important;
     line-height: 1.4em
 }
 
- .article-src-time {
+.article-src-time {
     font-size: 0.3rem !important;
 }
 
- .article-content .txt {
+.article-content .txt {
     font-size: 0.36rem !important;
 }
+
 
 /**网易代码引入演示**/
 
@@ -238,7 +247,8 @@ iframe {
     white-space: nowrap;
 }
 
-.productlinks-item .last, .productlinks-item .pr0 {
+.productlinks-item .last,
+.productlinks-item .pr0 {
     padding: 0;
 }
 
@@ -255,11 +265,15 @@ iframe {
     margin-top: 56px;
 }
 
-.item-mail, .item-sns {
+.item-mail,
+.item-sns {
     background: #fff;
 }
 
-.productlinks-i-mail, .productlinks-i-game, .productlinks-i-sns, .productlinks-i-recommend {
+.productlinks-i-mail,
+.productlinks-i-game,
+.productlinks-i-sns,
+.productlinks-i-recommend {
     width: 40px;
     height: 40px;
     text-indent: -10em;
@@ -304,7 +318,10 @@ iframe {
     background: none;
 }
 
-.productlinks-fold-163, .productlinks-fold-126, .productlinks-fold-yeah, .productlinks-fold-mob {
+.productlinks-fold-163,
+.productlinks-fold-126,
+.productlinks-fold-yeah,
+.productlinks-fold-mob {
     float: left;
     display: inline;
     width: 116px;
@@ -323,11 +340,9 @@ iframe {
 /*productlist-item */
 
 
-
-
 /**Article Content**/
 
-.container{
+.container {
     text-align: center;
 }
 
@@ -335,12 +350,14 @@ iframe {
     text-align: justify
 }
 
-.article-content .img .img-wrap,.hot-news img {
+.article-content .img .img-wrap,
+.hot-news img {
     background-repeat: no-repeat;
     background-position: center
 }
 
-.hn-title h2,.in-title h2 {
+.hn-title h2,
+.in-title h2 {
     z-index: 1;
     font-weight: 600
 }
@@ -354,7 +371,8 @@ iframe {
     margin-bottom: .2rem
 }
 
-#title .title,.article-title .title {
+#title .title,
+.article-title .title {
     font-size: 1.44rem;
     line-height: 1.4em
 }
