--- a/src/components/HomeAd/style.css
+++ b/src/components/HomeAd/style.css
@@ -1,5 +1,5 @@
 #home-ad {
-  background-color: #fff; }
+  background-color: #FFF; }
   #home-ad h2 {
     font-size: 16px;
     font-weight: 700;
@@ -10,7 +10,8 @@
     padding: 10px 15px; }
   #home-ad .ad-item {
     width: 33.3%;
-    height: 140px; }
+    height: 140px;
+    display: inline-block; }
     #home-ad .ad-item img {
       width: 100%;
       height: 100%; }
