--- a/src/components/HomeAd/style.scss
+++ b/src/components/HomeAd/style.scss
@@ -1,5 +1,5 @@
 #home-ad {
-    background-color: #fff;
+    background-color: #FFF;
     h2 {
         font-size: 16px;
         font-weight: 700;
@@ -13,6 +13,7 @@
     .ad-item {
         width: 33.3%;
         height: 140px;
+        display: inline-block;
         img {
             width: 100%;
             height: 100%;
