--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,15 @@
 * {
     padding: 0
 }
+
 body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+}
+
+li {
+    list-style: none
 }
 
 .float-left {
